--- a/meta-website/about/support/form-m.pug
+++ b/meta-website/about/support/form-m.pug
@@ -1,6 +1,6 @@
 #mailFrm.grid-form
    fieldset
-      legend Please, complete the form below and a Metabake representative will be in touch with you.
+      legend Please, complete the form below and a MetaBake representative will be in touch with you.
       div(data-row-span='2')
          div(data-field-span='1')
             label Full Name
