--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -8,22 +8,22 @@ header.flex.edge.delayShowing
 
    #navbar-brand.left.white
       .navbar-brand.mr-2.padL
-         h1 MetaBake.org
+         h1.logo MetaBake.org
    .right.white
 
       ul#navJBar.hide-lg.navJBar(data-function='navJBar')
 
          li.navFirst            
-            a(href='#') Why Metabake
+            a(href='#') Why MetaBake
             ul
                li
-                  a(href='/landing/why-metabake') Why Metabake
+                  a(href='/landing/why-MetaBake') Why MetaBake
                li
-                  a(href='/landing/metabake-vs-other-low-code') Metabake vs. Other Low Code
+                  a(href='/landing/MetaBake-vs-other-low-code') MetaBake vs. Other Low Code
                li
-                  a(href='/landing/metabake-vs-hugo') Metabake vs. Hugo
+                  a(href='/landing/MetaBake-vs-hugo') MetaBake vs. Hugo
                li
-                  a(href='/landing/metabake-vs-gulp-and-grunt') Metabake vs. Gulp and Grunt
+                  a(href='/landing/MetaBake-vs-gulp-and-grunt') MetaBake vs. Gulp and Grunt
          li
             a.who-benefits(href='/who-benefits') Who Benefits
          li
