--- a/meta-website/landing/metabake-vs-hugo/index.pug
+++ b/meta-website/landing/metabake-vs-hugo/index.pug
@@ -1,5 +1,5 @@
 extends /layout/layout
 
 block main
-   include:metaMD metabake-vs-hugo.md
+   include:metaMD MetaBake-vs-hugo.md
    .d-hide(data-js-menu-highlight="why-mbake")
