--- a/meta-website/layout/foot.pug
+++ b/meta-website/layout/foot.pug
@@ -4,7 +4,7 @@ footer
          a(href='/')
             span Meta
             | bake
-         .site-title Metabake is the extensible low-code productivity tool that simplifies the process for building great software.
+         .site-title MetaBake is the extensible low-code productivity tool that simplifies the process for building great software.
       .menu-wrap
          ul
             li.header
@@ -22,7 +22,7 @@ footer
       .copyright 
          | copyright 
          span &copy; 
-         | 2019 Metabake
+         | 2019 MetaBake
       .social-icons
          //- a(href='#')
          //-    include ../assets/img/svg/facebook-letter-logo.svg
