--- a/meta-website/layout/nav-m.pug
+++ b/meta-website/layout/nav-m.pug
@@ -3,20 +3,20 @@ header.flex.edge.header-amp
       a(href='/')#logo
          span Meta
          | bake
-      .site-title Metabake is the extensible low-code productivity tool that simplifies the process for building great software.
+      .site-title MetaBake is the extensible low-code productivity tool that simplifies the process for building great software.
    .right
       ul#navJBar.hide-lg.navJBar(data-function='navJBar')
          li
-            a.why-metabake(href='#') Why Metabake
+            a.why-MetaBake(href='#') Why MetaBake
             ul
                li
-                  a(href='/why-metabake/why-metabake') Why Metabake
+                  a(href='/why-MetaBake/why-MetaBake') Why MetaBake
                li
-                  a(href='/why-metabake/metabake-vs-other-low-code') Metabake vs. Other Low Code
+                  a(href='/why-MetaBake/MetaBake-vs-other-low-code') MetaBake vs. Other Low Code
                li
-                  a(href='/why-metabake/metabake-vs-hugo') Metabake vs. Hugo
+                  a(href='/why-MetaBake/MetaBake-vs-hugo') MetaBake vs. Hugo
                li
-                  a(href='/why-metabake/metabake-vs-gulp-and-grunt') Metabake vs. Gulp and Grunt
+                  a(href='/why-MetaBake/MetaBake-vs-gulp-and-grunt') MetaBake vs. Gulp and Grunt
          li
             a.who-benefits(href='/who-benefits') Who Benefits
          li
