--- a/meta-website/landing/metabake-vs-other-low-code/index.pug
+++ b/meta-website/landing/metabake-vs-other-low-code/index.pug
@@ -9,7 +9,7 @@ block main
 
    .pageBack
       br
-      h1.white.splash.text-center MetaBake versus Other Low-Code Platforms
+      h1.white.splash.text-center #{title}
 
 
    //.pad 
