--- a/meta-website/landing/why-metabake/index.pug
+++ b/meta-website/landing/why-metabake/index.pug
@@ -9,7 +9,7 @@ block main
 
    .pageBack
       br
-      h1.white.splash.text-center Why MetaBake?
+      h1.white.splash.text-center  #{title}
 
 
    //.pad 
