--- a/meta-website/layout/layout.pug
+++ b/meta-website/layout/layout.pug
@@ -9,7 +9,7 @@ html(lang='en_US')
       link(rel='shortcut icon', href= '/assets/favicon.png', type='image/x-icon')
       meta(name='viewport', content='width=device-width, initial-scale=1')
 
-      title #{pageTitle}
+      title #{title}
       meta(name='description', content=content_text)
 
       //- Schema.org markup for Google+
