--- a/meta-website/landing/metabake-vs-hugo/index.pug
+++ b/meta-website/landing/metabake-vs-hugo/index.pug
@@ -1,5 +1,23 @@
 extends /layout/layout
 
 block main
-   include:metaMD MetaBake-vs-hugo.md
-   .d-hide(data-js-menu-highlight="why-mbake")
+
+   style.
+      .pageBack {
+         background-image: url(img.jpg);
+      }
+
+   .pageBack
+      br
+      h1.white.splash.text-center #{title}
+
+
+   //.pad 
+      .title #{title}
+      .space #{content_text}
+      img(src=image, height='160', width='160')
+
+   .pad
+      include:metaMD text.md
+
+   p 
