--- a/meta-website/layout/layout-m.pug
+++ b/meta-website/layout/layout-m.pug
@@ -8,7 +8,7 @@ html('⚡')
       link(rel='shortcut icon', href= '/assets/favicon.png', type='image/x-icon')
       link(href='https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700,700i|Playfair+Display:400,400i,700,700i', rel='stylesheet')
 
-      title #{pageTitle}
+      title #{title}
       meta(name='description', content=content_text)
 
       // Schema.org markup for Google+
