--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -17,19 +17,19 @@ header.flex.edge.delayShowing
             a(href='#') Why MetaBake
             ul
                li
-                  a(href='/landing/why-MetaBake') Why MetaBake
+                  a(href='/landing/why') Why MetaBake
                li
-                  a(href='/landing/MetaBake-vs-other-low-code') MetaBake vs. Other Low Code
+                  a(href='/landing/low-code') MetaBake vs. Low Code et al.
                li
-                  a(href='/landing/MetaBake-vs-hugo') MetaBake vs. Hugo
+                  a(href='/landing/hugo') MetaBake vs. Hugo, StaticGen
                li
-                  a(href='/landing/MetaBake-vs-gulp-and-grunt') MetaBake vs. Gulp and Grunt
+                  a(href='/landing/gulp-grunt') MetaBake vs. Gulp, Grunt
          li
-            a.who-benefits(href='/who-benefits') Who Benefits
+            a.who-benefits(href='/benefits') Who Benefits
          li
             a.get-started(href='/get-started') Get Started
 
-         //- li
+         //- Move to footer li
             a.about(href='#') About
             ul
                li
