--- a/meta-website/index.pug
+++ b/meta-website/index.pug
@@ -1,5 +1,5 @@
 head
 body
    script.
-      locations = ['/landing/MetaBake-vs-other-low-code','/landing/MetaBake-vs-hugo','/landing/MetaBake-vs-gulp-and-grunt'];
-      window.location.href = locations[Math.floor(Math.random() * locations.length)];
+      locations = ['/landing/why']
+      window.location.href = locations[Math.floor(Math.random() * locations.length)]
