--- a/meta-website/benefits/m.pug
+++ b/meta-website/benefits/m.pug
@@ -1,8 +1,8 @@
 extends /layout/layout-m
 
 block main
-   include:metaMD who-benefits.md
+   include:metaMD who.md
    include:metaMD tech-leads.md
-   include:metaMD chief-technology-officers.md
-   include:metaMD vice-president-of-engineering.md
-   include:metaMD developers-new-to-low-code.md
+   include:metaMD cto.md
+   include:metaMD vpe.md
+   include:metaMD new.md
