--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -10,7 +10,6 @@ header.flex.edge.delayShowing
       .navbar-brand.mr-2.padL
          h1.logo MetaBake.org
    .right.white
-
       ul#navJBar.hide-lg.navJBar(data-function='navJBar')
 
          li.navFirst            
@@ -24,10 +23,16 @@ header.flex.edge.delayShowing
                   a(href='/landing/hugo') MetaBake vs. Hugo, StaticGen
                li
                   a(href='/landing/gulp-grunt') MetaBake vs. Gulp, Grunt
+               li
+                  a(href='/landing/benefits') Who Benefits
+               li
+                  a(href='/download') Download
+
          li
-            a.who-benefits(href='/benefits') Who Benefits
+            a(href='/get-started') Get Started
+
          li
-            a.get-started(href='/get-started') Get Started
+            a(href='/about/contact/') Contact us
 
          //- Move to footer li
             a.about(href='#') About
@@ -37,8 +42,6 @@ header.flex.edge.delayShowing
                li
                   a(href='/about/support/') Support
 
-         li
-            a(href='/about/contact/') Contact us
 
       div &nbsp;
 
