--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -18,7 +18,7 @@ header.flex.edge.delayShowing
                li
                   a(href='/landing/why') Why MetaBake
                li
-                  a(href='/landing/low-code') MetaBake vs. Low Code et al.
+                  a(href='/landing/low-code') MetaBake vs. Low Code
                li
                   a(href='/landing/hugo') MetaBake vs. Hugo, StaticGen
                li
@@ -32,7 +32,7 @@ header.flex.edge.delayShowing
             a(href='/get-started') Get Started
 
          li
-            a(href='/about/contact/') Contact us
+            a(href='/contact/') Contact us
 
          //- Move to footer li
             a.about(href='#') About
