--- a/meta-website/assets/css/main.css
+++ b/meta-website/assets/css/main.css
@@ -43,6 +43,10 @@ header {
    background-size: cover;
 }
 
+ul {
+   margin-left: 1rem;
+}
+
 
 .flex, .center, .top, .right, .bottom, .left{
    display: flex;
