--- a/meta-website/assets/css/nav.css
+++ b/meta-website/assets/css/nav.css
@@ -1,6 +1,10 @@
 /*
  Nav **************************************************/
 
+ #navJBar ul {
+   margin-left: 0;
+ }
+
  #navbar-brand, #navbar-brand * {
    height: 65px;
    line-height: 65px;
