--- a/meta-website/download/index.pug
+++ b/meta-website/download/index.pug
@@ -1,7 +1,8 @@
 extends /layout/layout
 
 block main
-   .columns.support(data-js-menu-highlight="about")
-      .column.col-7.col-lg-10.col-xs-12
-         include:metaMD text-1.md
-         include form      
+   .pad
+      .columns.support(data-js-menu-highlight="about")
+         .column.col-7.col-lg-10.col-xs-12
+            include:metaMD text-1.md
+            include form      
