--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -24,15 +24,17 @@ header.flex.edge.delayShowing
                li
                   a(href='/landing/gulp-grunt') MetaBake vs. Gulp, Grunt
                li
-                  a(href='/landing/benefits') Who Benefits
-               li
-                  a(href='/download') Download
+                  a(href='/landing/download') Download
 
          li
             a(href='/get-started') Get Started
 
          li
-            a(href='/contact/') Contact us
+            a(href='/use-cases/benefits') Who Benefits
+
+
+         li
+            a(href='/zabout/about/') About us
 
          //- Move to footer li
             a.about(href='#') About
