--- a/meta-website/ZFIRST/index.pug
+++ b/meta-website/ZFIRST/index.pug
@@ -3,11 +3,11 @@ extends /layout/layout
 block main
 
    style.
-      .pageBack {
+      .pageBack.delayShowing {
          background-image: url(img.jpg);
       }
 
-   .pageBack
+   .pageBack.delayShowing
       br
       h1.white.splash.text-center Why MetaBake?
 
