--- a/meta-website/layout/foot.pug
+++ b/meta-website/layout/foot.pug
@@ -2,11 +2,14 @@
 
 div
    hr
-   p.
-      Terms
-      Privacy
-      Contact us
+   .pad
+      h4 MetaBake is the extensible  open source low-code productivity tool for programmers.
+      i #low-code Some developers implement applications faster than others.
+      p.
+         Terms
+         Privacy
+         Contact us
 
-      YouTube
-      Meetup Forum
-      GitHub
+         YouTube
+         Meetup Forum
+         GitHub
