--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -4,7 +4,7 @@ link(href= '/assets/css/nav.css',  rel='stylesheet')
 
 script(src='/assets/3rd/navJBar.js')
 
-header.flex.edge.delayShowing
+header.flex.edge
 
    #navbar-brand.left.white
       .navbar-brand.mr-2.padL
