--- a/meta-website/use-cases/benefits/index.pug
+++ b/meta-website/use-cases/benefits/index.pug
@@ -4,7 +4,7 @@ block main
    .d-hide(data-js-menu-highlight="who-benefits")
 
    style.
-      .pageBack {
+      .pageBack.delayShowing {
          background-image: url(img.jpg);
       }
       .benefitsImg {
@@ -17,7 +17,7 @@ block main
          transform: scaleX(-1);
       }
 
-   .pageBack
+   .pageBack.delayShowing
       br
       h1.white.splash.text-center  #{title}
    
