--- a/meta-website/layout/layout.pug
+++ b/meta-website/layout/layout.pug
@@ -45,7 +45,7 @@ html(lang='en_US')
       //- top css layout
       link(href='/assets/3rd/spectreTop.css', rel='stylesheet', type='text/css') 
       style.
-         .delayShowing { opacity: 0; }
+         .delayShowing { opacity: 0 !important; }
       //- in case a page needs it:
       block head2
 
