--- a/meta-website/zabout/about/index.pug
+++ b/meta-website/zabout/about/index.pug
@@ -1,9 +1,8 @@
 extends /layout/layout
 
 block main
-   pad
+   .pad
 
-      include:metaMD about.md      
-      include:metaMD vic.md      
+      include:metaMD about.md
 
       .d-hide(data-js-menu-highlight="about")
