--- a/meta-website/ZFIRST/index.pug
+++ b/meta-website/ZFIRST/index.pug
@@ -3,7 +3,7 @@ extends /layout/layout
 block main
 
    style.
-      .pageBack.delayShowing {
+      .pageBack {
          background-image: url(img.jpg);
       }
 
