--- a/meta-website/use-cases/benefits/index.pug
+++ b/meta-website/use-cases/benefits/index.pug
@@ -4,7 +4,7 @@ block main
    .d-hide(data-js-menu-highlight="who-benefits")
 
    style.
-      .pageBack.delayShowing {
+      .pageBack {
          background-image: url(img.jpg);
       }
       .benefitsImg {
