--- a/meta-website/layout/foot.pug
+++ b/meta-website/layout/foot.pug
@@ -3,6 +3,9 @@
 div
    hr
    .pad
+      .monkeyContainer
+         img(src='/assets/logo.jpg')
+
       h4 MetaBake is the extensible  open source low-code productivity tool for programmers.
       i #low-code Some developers implement applications faster than others.
       p.
