--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -20,7 +20,7 @@ header.flex.edge
                li
                   a(href='/landing/low-code') MetaBake vs. Low Code
                li
-                  a(href='/landing/hugo') MetaBake vs. Hugo, StaticGen
+                  a(href='/landing/static-gen') MetaBake vs. Hugo, StaticGen
                li
                   a(href='/landing/gulp-grunt') MetaBake vs. Gulp, Grunt
                li
