--- a/meta-website/layout/layout.pug
+++ b/meta-website/layout/layout.pug
@@ -59,6 +59,6 @@ html(lang='en_US')
 
       script.
          function userSzSc() {
-            console.log('resize|scroll')
+            console.info('resize|scroll')
          }
       
