--- a/meta-website/layout/navJBar.pug
+++ b/meta-website/layout/navJBar.pug
@@ -8,7 +8,7 @@ header.flex.edge
 
    #navbar-brand.left.white
       .navbar-brand.mr-2.padL
-         h1.logo MetaBake.org
+         h1.logo mBake.org
    .right.white
       ul#navJBar.hide-lg.navJBar(data-function='navJBar')
 
