--- a/meta-website/get-started/index.pug
+++ b/meta-website/get-started/index.pug
@@ -4,3 +4,9 @@ block main
    .code(data-js-menu-highlight="get-started")
    .pad
       include:metaMD text.md
+
+   
+      a(href='http://forum.mbake.org') Forum
+      a(href='http://git.mbake.org') GitHub
+      a(href='http://docs.mbake.org') Docs
+
