--- a/meta-website/zabout/contact/index.pug
+++ b/meta-website/zabout/contact/index.pug
@@ -4,3 +4,10 @@ block main
    .columns(data-js-menu-highlight="contact")
       .column.col-6.col-lg-10.col-xs-12
          include email
+   
+   .pad
+
+      a(href='http://forum.mbake.org') Forum
+      a(href='http://git.mbake.org') GitHub
+      a(href='http://docs.mbake.org') Docs
+
