--- a/meta-website/assets/css/nav.css
+++ b/meta-website/assets/css/nav.css
@@ -5,6 +5,8 @@
    margin-left: 0;
  }
 
+ .navJBar .navFirst.open ul{z-index:9}
+
  #navbar-brand, #navbar-brand * {
    height: 65px;
    line-height: 65px;
