add navbar to blog website

--- a/mbake-blog/layout/nav.pug
+++ b/mbake-blog/layout/nav.pug
@@ -12,6 +12,8 @@ header.delayShowing
                         a.about(href='/') home
                     li
                         a.forum(href= ROOT + 'forum') forum
+                    li
+                        a.forum(href= ROOT + 'blog-website') Blog
                 .show-lg#navBarCont
                     svg.feather(viewBox='0 0 24 24')
                         line(x1='3', y1='12', x2='21', y2='12')
