add img body-background

--- a/mbake-blog/blog-website/header.pug
+++ b/mbake-blog/blog-website/header.pug
@@ -1,21 +1,23 @@
-- var navItems = ['Home', 'Github', 'About', 'Contact']
+mixin link(path, name)
+  a.btn.btn-link(href=path)= name
+
 
 .off-canvas
   a.off-canvas-toggle.btn.btn-primary.btn-action.show-md(href='#sidebar-id')
     i.icon.icon-menu
       
   #sidebar-id.off-canvas-sidebar
-    // off-screen sidebar
-    h1 Alvarez
+    
     
   a.off-canvas-overlay(href='#close')
   
   .off-canvas-content
-
       header.navbar
         section.navbar-section
-          a.mr-2.navbar-brand(href='/')
-            img(src=rootPath + 'logo.png')
+          a.mr-2.navbar-brand(href=ROOT + 'blog-website')
+            img.img-responsive(src=ROOT + 'assets/img/blog/logo.png')
         section.navbar-section
-          each item in navItems
-            a.btn.btn-link(href='#')= item
+          +link(ROOT + 'blog-website', 'home')
+          +link(ROOT + '#', 'contact')
+          +link(ROOT + '#', 'about')
+            
