--- a/mbake-blog/layout/blog-layout.pug
+++ b/mbake-blog/layout/blog-layout.pug
@@ -4,13 +4,14 @@ html(lang='en')
     meta(charset='utf-8')
     meta(content='width=device-width,initial-scale=1', name='viewport')
     title Blog Website
-    //- link(href='/assets/css/style.css', rel='stylesheet')
 
     //- spectre
     link(href='https://unpkg.com/spectre.css/dist/spectre.min.css', rel='stylesheet')
     link(href='https://unpkg.com/spectre.css/dist/spectre-exp.min.css', rel='stylesheet')
     link(href='https://unpkg.com/spectre.css/dist/spectre-icons.min.css', rel='stylesheet')
     
+    link(href='/assets/css/blog-style.css', rel='stylesheet')
+      
     script(src='https://cdn.jsdelivr.net/npm/riot@3.10.3/riot.min.js')
     //- script(src='/assets/tags/first-tag.min.js')
   body
