--- a/mbake-blog/assets/scss/_button.scss
+++ b/mbake-blog/assets/scss/_button.scss
@@ -1,4 +1,16 @@
 .btn {
+    &.btn-link {
+    color: $mine-shaft;
+  }
+}
+
+
+
+
+
+
+
+.btn {
     &-custom {
         text-transform: uppercase;
         border-radius: $border-radius-theme1;
@@ -50,9 +62,9 @@
         }
     }
     &-primary, &-secondary {
-        -webkit-transition: color 0.3s ease, border-color 0.3s ease, background-position 0.3s ease, background-color 0 linear 0.3s; 
-        -ms-transition: color 0.3s ease, border-color 0.3s ease, background-position 0.3s ease, background-color 0 linear 0.3s; 
-        transition: color 0.3s ease, border-color 0.3s ease, background-position 0.3s ease, background-color 0 linear 0.3s; 
+        -webkit-transition: color 0.3s ease, border-color 0.3s ease, background-position 0.3s ease, background-color 0 linear 0.3s;
+        -ms-transition: color 0.3s ease, border-color 0.3s ease, background-position 0.3s ease, background-color 0 linear 0.3s;
+        transition: color 0.3s ease, border-color 0.3s ease, background-position 0.3s ease, background-color 0 linear 0.3s;
         &:hover, &:active, &:focus {
             background-position: left bottom;
         }
