--- a/mbake-blog/blog-website/index.pug
+++ b/mbake-blog/blog-website/index.pug
@@ -1,4 +1,15 @@
 extends /layout/blog-layout
 
 block main
+  p From websites to marketing tools and analytics, 
+  h1 
+    | Our blogging functionality is complete with 
+    br 
+    | images, galleries, videos, and audio.
+  .input-group
+    input.form-input(type='email', placeholder='Enter your email')
+    button.btn.btn-primary.input-group-btn Subscribe
+  
+  
+  
   
