--- a/mbake-blog/blog-website/header.pug
+++ b/mbake-blog/blog-website/header.pug
@@ -14,7 +14,7 @@ mixin social()
     
   a.off-canvas-overlay(href='#close')
   
-  .off-canvas-content
+  .off-canvas-content.px-2
       header.navbar
         section.navbar-section
           a.mr-2.navbar-brand(href=ROOT + 'blog-website')
