no more -tag, now -comp

--- a/al-www/news/index.pug
+++ b/al-www/news/index.pug
@@ -3,7 +3,7 @@ extends /layout/layout
 
 
 block top
-   script(src=ROOT+ 'news/tag/table-tag.js')
+   script(src=ROOT+ 'news/tag/table-comp.js')
    style.
       .pageBack {
          background-image: url(img.jpg);
