--- a/al-www/team/index.pug
+++ b/al-www/team/index.pug
@@ -4,7 +4,7 @@ extends /layout/layout
 block head2
   
 block top
-   script(src=ROOT+ 'team/tags/card-tag.js')
+   script(src=ROOT+ 'team/comps/card-comp.js')
 
    style.
       .pageBack {
