--- a/al-www/news/index.pug
+++ b/al-www/news/index.pug
@@ -18,10 +18,10 @@ block top
 block main
    .pad
       H1.cAccent.line.fBod Press Releases
-      table-tag
+      table-comp
 
    script.
-      const tag = riot.mount('table-tag')[0] // mount the first tag
+      const tag = riot.mount('table-comp')[0] // mount the first tag
       axios.get('/news/list.json').then(function(resp) {
          news = resp.data;
          console.info('n ready');
