--- a/al-www/team/index.pug
+++ b/al-www/team/index.pug
@@ -19,14 +19,14 @@ block top
 
 block main
    .pad
-      card-tag
+      card-comp
 
    script.
       axios.get('/team/items.json').then(function(resp) {
          team = resp.data;
          console.info('t ready');
          
-         const tag = riot.mount('card-tag')[0]; // mount the first tag
+         const tag = riot.mount('card-comp')[0]; // mount the first tag
          console.info(team.items);
          tag.render(team.items);
       });
