--- a/mbake-blog/blog-website/index.pug
+++ b/mbake-blog/blog-website/index.pug
@@ -9,7 +9,19 @@ block main
   .input-group
     input.form-input(type='email', placeholder='Enter your email')
     button.btn.btn-primary.input-group-btn Subscribe
+    
+  card-tag  
   
+  script.
+    axios.get('../posts/items.json').then(function(resp) {
+       resp.data.items = resp.data.items.filter(item => item.publish1 === true);
+       posts = resp.data;
+       console.info('resp.data --------->', posts);
+    
+       const tag = riot.mount('card-tag')[0]; 
+       console.info('posts.items ------------>', posts.items);
+       tag.render(posts.items);
+     });
   
   
   
