--- a/mbake-blog/layout/blog-layout.pug
+++ b/mbake-blog/layout/blog-layout.pug
@@ -13,7 +13,8 @@ html(lang='en')
     link(href='https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700' rel='stylesheet')
       
     script(src='https://cdn.jsdelivr.net/npm/riot@3.10.3/riot.min.js')
-    //- script(src='/assets/tags/first-tag.min.js')
+    script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js') 
+    script(src=ROOT+ 'blog-website/comps/card-tag.js') 
   body
     .container.grid-lg
       include /blog-website/header
