fill data using items.json

--- a/mbake-blog/blog-website/comps/card-tag.pug
+++ b/mbake-blog/blog-website/comps/card-tag.pug
@@ -8,8 +8,8 @@ card-tag
         
           .card-top
             button.btn.btn-primary button
-            h3 7 Must Have Tools For Web Designers
-            div August 6, 2018 | Eldred Braun
+            h3 { title }
+            div { date } | Eldred Braun
           .card-bottom
             button.btn.btn-primary Read More
             
