styling card item

--- a/mbake-blog/assets/scss/style.scss
+++ b/mbake-blog/assets/scss/style.scss
@@ -14,9 +14,11 @@ body {
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url('../img/blog/background.png') repeat 100% 100%;
   background-color: #ccd7e4;
   background-size: cover;
+	color: #333;
 }
 
 header {
+	padding: 20px 0;
 	img {
 	  width: 100px;
 	}
@@ -36,9 +38,33 @@ header {
 	}
 }
 
+.banner {
+	display: flex;
+	align-items: center;
+	height: 500px;
+	p {
+		color: #7c8499;
+	}
+
+	h1 {
+		font-family: 'Bitter', serif;
+		font-size: 55px;
+    line-height: 60px;
+    font-weight: 500;
+	}
+	input, button {
+		border-radius: 50px;
+	}
+}
+
+.cards-container {
+
+}
+
 .card {
 	position: relative;
 	border: 20px solid #fff;
+	color: #fff;
 	&-top, &-bottom {
 		position: absolute;
 		padding: 25px;
@@ -47,6 +73,7 @@ header {
 
 	&-top {
 		top: 0;
+		background-image: linear-gradient(180deg, rgba(0, 0, 0, .72), hsla(0, 0%, 100%, 0));
 	}
 
 	&-bottom {
@@ -56,6 +83,7 @@ header {
 
 footer {
 	padding: 20px 0;
+	margin: 50px 0;
 	border-top: 1px solid #d4deeb;
 }
 
