--- a/mbake-blog/layout/blog-layout.pug
+++ b/mbake-blog/layout/blog-layout.pug
@@ -11,6 +11,7 @@ html(lang='en')
       
     //- Fonts
     link(href='https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700' rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css?family=Bitter', rel='stylesheet')
       
     script(src='https://cdn.jsdelivr.net/npm/riot@3.10.3/riot.min.js')
     script(src='https://unpkg.com/axios@0.19.0-beta.1/dist/axios.min.js') 
