--- a/mbake-blog/assets/css/style.css
+++ b/mbake-blog/assets/css/style.css
@@ -924,12 +924,17 @@ a.text-error:visited{color:#ff6003;}
 .social-icons .btn-custom:last-of-type{margin:0;}
 @media (max-width:600px){.social-icons .btn-custom{width:30px;max-width:30px;min-width:30px;padding:0;height:30px;margin:0 5px 0 0;}
  .social-icons svg{width:10px;height:10px;}}
-body{font-family:"Poppins",sans-serif;background:linear-gradient(180deg,rgba(255,255,255,0.8),rgba(255,255,255,0.8)),url("../img/blog/background.png") repeat 100% 100%;background-color:#ccd7e4;background-size:cover;}
+body{font-family:"Poppins",sans-serif;background:linear-gradient(180deg,rgba(255,255,255,0.8),rgba(255,255,255,0.8)),url("../img/blog/background.png") repeat 100% 100%;background-color:#ccd7e4;background-size:cover;color:#333;}
+header{padding:20px 0;}
 header img{width:100px;}
 header .social-icon{text-align:center;width:30px;height:30px;line-height:30px;margin-right:4px;border-radius:2px;background-color:#fff;box-shadow:1px 1px 3px 0 #c1cddb;opacity:0.60;transition:all 400ms ease;}
-.card{position:relative;border:20px solid #fff;}
+.banner{display:flex;align-items:center;height:500px;}
+.banner p{color:#7c8499;}
+.banner h1{font-family:'Bitter',serif;font-size:55px;line-height:60px;font-weight:500;}
+.banner input,.banner button{border-radius:50px;}
+.card{position:relative;border:20px solid #fff;color:#fff;}
 .card-top,.card-bottom{position:absolute;padding:25px;left:0;}
-.card-top{top:0;}
+.card-top{top:0;background-image:linear-gradient(180deg,rgba(0,0,0,0.72),rgba(255,255,255,0));}
 .card-bottom{bottom:0;}
-footer{padding:20px 0;border-top:1px solid #d4deeb;}
-@media (max-width:840px){header a{margin-left:auto;}} /* mB v4.16.19 on 2019-02-26T20:09:50.936Z */
+footer{padding:20px 0;margin:50px 0;border-top:1px solid #d4deeb;}
+@media (max-width:840px){header a{margin-left:auto;}} /* mB v4.16.19 on 2019-02-27T15:03:30.595Z */
