--- a/mbake-blog/blog-website/index.pug
+++ b/mbake-blog/blog-website/index.pug
@@ -1,14 +1,18 @@
 extends /layout/blog-layout
 
 block main
-  p From websites to marketing tools and analytics, 
-  h1 
-    | Our blogging functionality is complete with 
-    br 
-    | images, galleries, videos, and audio.
-  .input-group
-    input.form-input(type='email', placeholder='Enter your email')
-    button.btn.btn-primary.input-group-btn Subscribe
+  .banner
+    div
+      p From websites to marketing tools and analytics, 
+      h1 
+        | Our blogging functionality is complete with 
+        br 
+        | images, galleries, videos, and audio.
+      .columns
+        .column.col-6.col-xs-12
+          .input-group
+            input.form-input.input-lg(type='email', placeholder='Enter your email')
+            button.btn.btn-primary.input-group-btn.btn-lg Subscribe
     
   card-tag  
   
