--- a/mbake-blog/blog-website/comps/card-tag.pug
+++ b/mbake-blog/blog-website/comps/card-tag.pug
@@ -5,7 +5,7 @@ card-tag
         .column.col-6.col-sm-12
           .card
             .card-image
-              img.img-responsive(src='{img_url}')
+              img.img-responsive.img-fit-cover(src='{img_url}')
           
             .card-top
               button.btn.btn-primary button
