--- a/mbake-blog/blog-website/index.pug
+++ b/mbake-blog/blog-website/index.pug
@@ -1,7 +1,7 @@
 extends /layout/blog-layout
 
 block main
-  .banner
+  .banner-home
     div
       p From websites to marketing tools and analytics, 
       h1 
